--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,17 +14,17 @@ services:
       - PYTHONUNBUFFERED=1
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/api/health"]
-      interval: 30s
-      timeout: 10s
+      interval: 10s
+      timeout: 5s
       retries: 3
-      start_period: 20s
+      start_period: 10s
 
   frontend:
     build:
       context: ./frontend
       dockerfile: Dockerfile
     ports:
-      - "3000:3000"
+      - "3001:3000"  # Changed from 3000:3000 to avoid conflict
       - "24678:24678"  # WebSocket port for HMR
     volumes:
       - ./frontend:/app
@@ -40,6 +40,7 @@ services:
       - VITE_HMR_PORT=24678
       - NODE_ENV=development
       - VITE_HMR_HOSTNAME=localhost
+      - VITE_API_URL=http://localhost:8000  # Add API URL for local development
     networks:
       default:
         aliases:
