--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -14,26 +14,33 @@ server {
     add_header X-XSS-Protection "1; mode=block";
     add_header Referrer-Policy "strict-origin-when-cross-origin";
 
+    # Handle Single Page Application routing
     location / {
         try_files $uri $uri/ /index.html;
+        add_header Cache-Control "no-cache";
     }
 
-    # Proxy API requests to the backend
-    location /api/ {
-        proxy_pass http://backend:8000;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+    # Serve env.js without caching to ensure fresh config
+    location = /env.js {
+        expires -1;
+        add_header Cache-Control "no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0";
     }
 
-    # Cache static assets
-    location /assets/ {
+    # Static assets caching
+    location /assets {
         expires 1y;
         add_header Cache-Control "public, no-transform";
+    }
+
+    # Health check endpoint
+    location = /health {
+        access_log off;
+        return 200 'OK';
+        add_header Content-Type text/plain;
+    }
+
+    # Block direct API access - all API calls should go through VITE_API_URL
+    location /api/ {
+        return 404;
     }
 }
